Fix avatar size on smaller screen

--- a/app/assets/stylesheets/developers.sass
+++ b/app/assets/stylesheets/developers.sass
@@ -25,6 +25,11 @@
   .profile--item
     padding-bottom: 0
 
+    .avatar
+      img
+        width: 50px!important
+        height: 50px!important
+
     .stats
       display: none!important
 
